--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <link type="text/css" href="/css/styles.css" rel="stylesheet" />
     <script type="text/javascript" src="/js/materialize.min.js"></script>
     <link rel="manifest" href="/manifest.json" />
+    <!-- ios support -->
+    <link rel="apple-touch-icon" href="/img/icons/icon-72x72.png" />
+    <link rel="apple-touch-icon" href="/img/icons/icon-96x96.png" />
+    <link rel="apple-touch-icon" href="/img/icons/icon-128x128.png" />
+    <link rel="apple-touch-icon" href="/img/icons/icon-144x144.png" />
+    <link rel="apple-touch-icon" href="/img/icons/icon-152x152.png" />
+    <link rel="apple-touch-icon" href="/img/icons/icon-192x192.png" />
+    <link rel="apple-touch-icon" href="/img/icons/icon-384x384.png" />
+    <link rel="apple-touch-icon" href="/img/icons/icon-512x512.png" />
+    <meta name="apple-mobile-web-app-status-bar" content="#aa7700" />
   </head>
   <body class="grey lighten-4">
     <!-- top nav -->
