--- a/index.html
+++ b/index.html
@@ -133,7 +133,37 @@
       </form>
     </div>
 
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-analytics.js";
+      import {
+        getFirestore,
+        collection,
+        getDocs,
+      } from "firebase/firestore/lite";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyDLXP4laPIfkKQy42RDe43wg8cKjJK7zEM",
+        authDomain: "food-ninja-pwa-c3b02.firebaseapp.com",
+        projectId: "food-ninja-pwa-c3b02",
+        storageBucket: "food-ninja-pwa-c3b02.firebasestorage.app",
+        messagingSenderId: "720328263893",
+        appId: "1:720328263893:web:c5dd70b1a16d567b063a5c",
+        measurementId: "G-R6CYGK3Z6F",
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+      const db = getFirestore(app);
+    </script>
     <script src="/js/app.js"></script>
+    <script src="/js/db.js"></script>
     <script src="/js/ui.js"></script>
   </body>
 </html>
